--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -19,6 +19,7 @@ $font-2: "Epilogue-Bold", sans-serif;
 $color-1: hsl(0, 0%, 98%);
 $color-2: hsl(0, 0%, 41%);
 $color-3: hsl(0, 0%, 8%);
+$color-4: #16adbb;
 
 
 //-------------------------------------RESET---------------------------------------------------------
@@ -51,8 +52,20 @@ body {
   }
 }
 
+
 //-------------------------------------MIXINS---------------------------------------------------------
 
 
 //-------------------------------------PLACEHOLDERS---------------------------------------------------------
 
+
+//-------------------------------------KEYFRAMES---------------------------------------------------------@keyframes appearance {
+@keyframes appearance {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
