--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,14 @@ body {
   stroke: hsl(0deg, 0%, 8%);
 }
 
+@keyframes appearance {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -40,9 +48,9 @@ body {
 }
 
 .header__image {
-  height: 31px;
+  height: 35px;
   width: 90px;
-  padding-top: 5px;
+  margin-top: 5px;
 }
 
 .navbar {
@@ -80,11 +88,55 @@ body {
   position: absolute;
   top: 4px;
   left: 74px;
+  transition: 0.2s ease-in-out;
 }
 .navbar__item--arrow2 {
   position: absolute;
   top: 4px;
   left: 77px;
+  transition: 0.2s ease-in-out;
+}
+
+.dropdown {
+  position: absolute;
+  z-index: 2;
+  border-radius: 10px;
+  box-shadow: 0 0 26px 0 rgba(0, 0, 0, 0.15);
+  cursor: default;
+}
+.dropdown__items {
+  color: #686868;
+  text-decoration: none;
+  transition: 0.2s ease-out;
+}
+.dropdown__items:hover {
+  color: #16adbb;
+}
+.dropdown--features {
+  display: none;
+  top: 28px;
+  left: -84px;
+  height: 190px;
+  width: 160px;
+  padding: 20px 18px;
+  grid-template-columns: 30% 70%;
+  align-items: center;
+}
+.dropdown--company {
+  display: none;
+  top: 28px;
+  left: -4px;
+  height: 153px;
+  width: 113px;
+  align-items: center;
+  padding: 20px 18px;
+}
+
+.show {
+  opacity: 1;
+  display: grid;
+  animation-duration: 0.5s;
+  animation-name: appearance;
 }
 
 section {
