--- a/scss/hearder.scss
+++ b/scss/hearder.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 35px;
+  margin: 0 20px;
 
 }
 
@@ -14,7 +15,7 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  width: 583px;
+  width: 1215px;
   align-items: center;
 }
 
