--- a/css/small-screen-devices.css
+++ b/css/small-screen-devices.css
@@ -36,7 +36,7 @@ body {
     position: relative;
     padding: 0;
     margin: 0 auto;
-    height: 65px;
+    height: 70px;
     width: 95%;
     align-items: center;
 }
@@ -48,7 +48,7 @@ body {
     right: 15px;
     width: 50px;
     height: 50px;
-    background: url("/images/icon-menu.svg") center/contain no-repeat;
+    background: url("/images/icon-menu.svg") center/cover no-repeat;
     transition: 0.2s ease-in-out;
 }
 
@@ -63,9 +63,6 @@ body {
     right: -300px;
     width: 255px;
     height: 100vh;
-
-
-
 }
 
 .sidebar {
@@ -138,12 +135,8 @@ body {
 
 
 section {
-    position: absolute;
-    grid-template-columns: 1fr;
-    grid-template-rows:50% 50%;
-    grid-template-areas:
-    'image'
-    'text';
+    display: flex;
+    flex-direction: column;
     margin: 0;
     width: 100vw;
     height: 100%;
@@ -154,12 +147,11 @@ section {
 
 .left-part {
     justify-content: space-between;
-    grid-area: text;
+    order: 2;
     padding: 40px 10px 0 10px;
     align-items: center;
     text-align: center;
-    height: 80%;
-    min-height: 500px;
+    height: 500px;
 }
 
 .left-part__title {
@@ -191,6 +183,6 @@ section {
 
 .right-part {
     background: url('/images/image-hero-mobile.png') center/cover;
-    grid-area: image;
-
+    order: 1;
+    height: 310px;
 }
